--- a/.github/workflows/main_analytics-imvks.yml
+++ b/.github/workflows/main_analytics-imvks.yml
@@ -73,4 +73,7 @@ jobs:
         with:
           app-name: 'analytics-imvks'
           slot-name: 'Production'
+          package: '.'
+          startup-command: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app:app"
+
           
