--- a/.github/workflows/main_analytics-imvks.yml
+++ b/.github/workflows/main_analytics-imvks.yml
@@ -63,9 +63,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_99CAD9A7528E47499617A95FCCF3310D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0E9C423611164DA4833D5CBAF508E663 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_075594016B214C2C8BAFAE47DBD9F18F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_466A62D9660A4149AA520D7045BCB846 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DCDB9DB305654B9B9349CEF83E338CD1 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C4E4E0285AD34F10B216A9260681475E }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
@@ -73,4 +73,7 @@ jobs:
         with:
           app-name: 'analytics-imvks'
           slot-name: 'Production'
+          package: '.'
+          startup-command: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app:app"
+
           
